[package]
name = "rustl"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple_logger = "4.1.0"
log = "0.4"
cfg-if = "1"
wgpu = "0.16.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
instant = "0.1"
winit = "0.28.6"
anyhow = "1.0"
nalgebra = "0.32.2"
sha256 = "1.1.3"

parry3d = "0.13"
bvh = "0.7"

tobj = { version = "4.0", features = ["async"]}

# jpeg decoder that image includes uses rayon to speed up the decoding with threads. WASM doesn't support threads currently so we need to disable this so that our code won't crash when we try to load a jpeg on the web.
image = { version = "0.24.6", default-features = false, features = [ "png", "jpeg"] }
# image = "0.24.5"

egui = "0.22.0"
egui-wgpu = "0.22.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.22.0"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
reqwest = "0.11"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

egui-winit = { version = "0.22.0", default-features = false, features = [
  "links",
] }

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3"
anyhow = "1.0"