[package]
name = "rustl"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple_logger = "5.0"
log = "0.4"
cfg-if = "1"
wgpu = "22.1"
bytemuck = { version = "1.16", features = [ "derive" ] }
instant = "0.1"
winit = "0.30.5"
anyhow = "1.0"
nalgebra = "0.33.0"
sha256 = "1.5.0"
colored = "2.1.0"
base64 = "0.22"
strum = "0.26"
strum_macros = "0.26"
rfd = "0.14.1"
serde = "1.0"
serde_json = "1.0"
regex = "1.10"
rodio = "0.19.0"
gilrs = { version = "0.10", features = ["wgi"]}
take_mut = "0.2"

parry3d = "0.17"
bvh = "0.10.0"

arboard = "3.4.0"

tobj = { version = "4.0", features = ["async"]}

gltf = { version = "1.4", features = [
#gltf = { git = "https://github.com/gltf-rs/gltf", features = [
  "extras",
  "names",
  "KHR_lights_punctual",
  "KHR_materials_specular",
  "KHR_materials_ior",
  "KHR_materials_unlit"
]}

# jpeg decoder that image includes uses rayon to speed up the decoding with threads. WASM doesn't support threads currently so we need to disable this so that our code won't crash when we try to load a jpeg on the web.
image = { version = "0.25", default-features = false, features = [ "png", "jpeg"] }
# image = "0.24.5"

#egui = "0.28.1"
#egui-wgpu = "0.28.1"
#egui_plot = "0.28.1"
egui = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui_plot = { git = "https://github.com/emilk/egui_plot" }

[patch.crates-io]
egui_plot = { git = "https://github.com/emilk/egui_plot", branch = "main" }
egui = { git = "https://github.com/emilk/egui" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#egui-winit = "0.24.1"
egui-winit = { git ="https://github.com/emilk/egui" }
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
reqwest = "0.12"
wgpu = { version = "22.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
wasm_thread = { version = "0.3.0", features = ["es_modules"]}

#egui-winit = { version = "0.24.1", default-features = false, features = [
egui-winit = { git ="https://github.com/emilk/egui", default-features = false, features = [
  "links",
] }

[build-dependencies]
fs_extra = "1.3"
glob = "0.3"
anyhow = "1.0"